Subindo correção de animação e scala dos objetos

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </style>
     <script type="module" src="./src/index.js"></script>
 <body>
-    <canvas></canvas>
+    <canvas width="384" height="224"></canvas>
     <img src="./images/ken.png" alt="ken">
     <img src="./images/ryu.png" alt="ryu">
     <img src="./images/background.png" alt="background">
