--- a/index.html
+++ b/index.html
@@ -1,41 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Street Fighter II</title>
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>StreetFighter II</title>
     <style>
-        html,
-        body{
-            padding: 0;
-            margin: 0;
-        }
-        body{
-            display: flex;
-        }
-        body,
-        canvas{
-            background-color: black;
-        }
+      html,
+      body {
+        padding: 0;
+        margin: 0;
+        height: 100%;
+      }
+      body {
+        display: flex;
+      }
+      body,
+      canvas {
+        background-color: black;
+      }
 
-        canvas{
-            width: 100%;
-            object-fit: contain;
-            image-rendering: crisp-edges;
-            image-rendering: pixelated;
-        }
+      canvas {
+        width: 100%;
+        object-fit: contain;
+        image-rendering: crisp-edges;
+        image-rendering: pixelated;
+      }
 
-        img{
-            display: none;
-        }
+      img {
+        display: none;
+      }
     </style>
     <script type="module" src="./src/index.js"></script>
-<body>
-    <canvas width="384" height="224"></canvas>
-    <img src="./images/ken.png" alt="ken">
-    <img src="./images/ryu.png" alt="ryu">
-    <img src="./images/background.png" alt="background">
-    
-</body>
+  </head>
+  <body>
+    <canvas></canvas>
+    <img src="./images/background.png" alt="background" />
+    <img src="./images/ken.png" alt="ken" />
+    <img src="./images/guile.png" alt="guile">
+    <img src="./images/ryu.png" alt="ryu" />
+  </body>
 </html>
